--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1835,7 +1835,7 @@
         "de":"Segen",
         "jp":"",
         "pt":"",
-        "vi":"Ban Phước",
+        "vi":"Chúc Phúc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6377,7 +6377,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"<b>Thông Tin Hệ Thống</b><br>Hãy cầu nguyện cho <i>Bur</i> để nâng cao chỉ số của bản thân. Sự ban phước giới hạn tăng tiến mỗi 5 cấp độ của nhân vật bắt đầu từ cấp độ 20. Khi tất cả phước lành đạt cấp 5, 10 và 15, bạn sẽ có thêm các chỉ số cộng thêm.",
+        "vi":"<b>Thông Tin Hệ Thống</b><br>Hãy cầu nguyện cho <i>Bur</i> để nâng cao chỉ số của bản thân. Chúc phúc giới hạn tăng tiến mỗi 5 cấp độ của nhân vật bắt đầu từ cấp độ 20. Khi tất cả chúc phúc đạt cấp 5, 10 và 15, bạn sẽ có thêm các chỉ số cộng thêm.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8676,7 +8676,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thu Chọn",
+        "vi":"Đã Xong",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8695,7 +8695,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hoàn Tác",
+        "vi":"Chưa Xong",
         "ar":"",
         "it":"",
         "pl":"",
