--- a/Translation/item.json
+++ b/Translation/item.json
@@ -18135,7 +18135,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Phước Lành Của Thủy Tinh Linh",
+        "vi":"Chúc Phúc Của Thủy Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -19826,7 +19826,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Địa Hồn",
+        "vi":"Nham Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -19845,7 +19845,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cầu Khai Sáng",
+        "vi":"Cầu Phát Sáng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -19959,7 +19959,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nước Địa Chất",
+        "vi":"Thủy Địa Chất",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20035,7 +20035,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hồn Đỏ",
+        "vi":"Xích Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20054,7 +20054,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hồn Vàng",
+        "vi":"Hoàng Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20073,7 +20073,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hồn Xanh",
+        "vi":"Bích Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -21631,7 +21631,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Sách Đổi Mới Nhiệm Vụ Ngày",
+        "vi":"Sách Đổi Nhiệm Vụ Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -21973,7 +21973,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Phước Lành Của Bur",
+        "vi":"Chúc Phúc Của Bur",
         "ar":"",
         "it":"",
         "pl":"",
@@ -27798,7 +27798,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 1-30] x 3<br> - Thánh Giá Phục Sinh<br> - Ngọc Nguyên Tố x 2<br> - Sách Đổi Mới Nhiệm Vụ Ngày",
+        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 1-30] x 3<br> - Thánh Giá Phục Sinh<br> - Ngọc Nguyên Tố x 2<br> - Sách Đổi Nhiệm Vụ Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -27817,7 +27817,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 1-30] x 5<br> - Ngọc Nâng Cấp Bậc Cao [Cấp 1-30]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Mới Nhiệm Vụ Ngày x 2<br> - Vàng x 5000",
+        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 1-30] x 5<br> - Ngọc Nâng Cấp Bậc Cao [Cấp 1-30]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Nhiệm Vụ Ngày x 2<br> - Vàng x 5000",
         "ar":"",
         "it":"",
         "pl":"",
@@ -27874,7 +27874,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> -Ngọc Nâng Cấp [Cấp 40] x 3<br> - Thánh Giá Phục Sinh<br> - Ngọc Nguyên Tố x 2<br> - Sách Đổi Mới Nhiệm Vụ Ngày",
+        "vi":"Nhấn chuột phải để nhận :<br> -Ngọc Nâng Cấp [Cấp 40] x 3<br> - Thánh Giá Phục Sinh<br> - Ngọc Nguyên Tố x 2<br> - Sách Đổi Nhiệm Vụ Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -27894,7 +27894,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 40] x 5<br> - Ngọc Nâng Cấp Bậc Cao [Cấp 40]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Mới Nhiệm Vụ Ngày x 2<br> - Vàng x 6000",
+        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 40] x 5<br> - Ngọc Nâng Cấp Bậc Cao [Cấp 40]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Nhiệm Vụ Ngày x 2<br> - Vàng x 6000",
         "ar":"",
         "it":"",
         "pl":"",
@@ -27952,7 +27952,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 50] x 3<br> - Thánh Giá Phục Sinh<br> - Ngọc Nguyên Tố x 2<br> - Sách Đổi Mới Nhiệm Vụ Ngày",
+        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 50] x 3<br> - Thánh Giá Phục Sinh<br> - Ngọc Nguyên Tố x 2<br> - Sách Đổi Nhiệm Vụ Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -27971,7 +27971,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 50] x 5<br> - Ngọc Nâng Cấp Bậc Cao [Cấp 50]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Mới Nhiệm Vụ Ngày x 2<br> - Vàng x 8000",
+        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 50] x 5<br> - Ngọc Nâng Cấp Bậc Cao [Cấp 50]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Nhiệm Vụ Ngày x 2<br> - Vàng x 8000",
         "ar":"",
         "it":"",
         "pl":"",
