--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -8960,7 +8960,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Các đòn Đánh Thường có khả năng đốt Năng Lượng của mục tiêu. Gây ra một lượng Công Kích Thần Thánh tương đương. Có {0}% khả năng đốt 10 Năng Lượng của mục tiêu",
+        "vi": "Các đòn Đánh Thường có khả năng đốt Năng Lượng của mục tiêu. Gây ra một lượng Công Kích Thần Thánh tương đương. Có {0}% khả năng đốt Năng Lượng tương đương 1% Năng Lượng Tối Đa của mục tiêu",
         "ar": "",
         "it": "",
         "pl": "",
@@ -9416,7 +9416,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Mục tiêu giảm 33% khả năng hồi Máu từ thuốc trong 5 giây.",
+        "vi": "Mục tiêu giảm 33% khả năng hồi Máu từ mọi nguồn trong 5 giây.",
         "ar": "",
         "it": "",
         "pl": "",
