--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2716,6 +2716,25 @@
         "th":"",
         "id":"Stop"
     },
+    "UI.windows.craft.btn.checkPurif":{
+        "en":"Check Stats",
+        "fr":"Consulter les stats",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.confirm.title":{
         "en":"Confirm box",
         "fr":"Confirmation",
