--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2728,7 +2728,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kiểm Tra Chỉ Số",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2880,7 +2880,7 @@
         "de":"Bieten",
         "jp":"",
         "pt":"",
-        "vi":"Đ.Giá",
+        "vi":"Đấu Giá",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5028,7 +5028,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhận Thưởng K.Nghiệm Hàng Ngày",
+        "vi":"Nhận thưởng Kinh Nghiệm Hàng Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5047,7 +5047,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hoàn Thành 10 Nhiệm Vụ Ngày",
+        "vi":"Hoàn thành 10 Nhiệm Vụ Hàng Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5066,7 +5066,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hoàn Thành 5 Nhiệm Vụ Bur",
+        "vi":"Hoàn thành 5 Nhiệm Vụ Bur",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5161,7 +5161,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Phụ Bản Hàng Ngày",
+        "vi":"Phụ bản hàng ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5180,7 +5180,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tham gia Phụ Bản K.Nghiệm",
+        "vi":"Tham gia Phụ Bản Kinh Nghiệm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5218,7 +5218,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm 2 <span title='Do 2 Werewolf, Masquerade or Battlefield'>sự kiện</span>",
+        "vi":"Làm 2 <span title='Làm 2 sự kiện Người Sói Đi Săn, Lễ Hội Mặt Nạ, hoặc Chiến Trường'>sự kiện</span>",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5256,7 +5256,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoàn thành nhiệm vụ Kuroom hàng ngày 20 lần",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5484,7 +5484,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Zeal Hôm Nay",
+        "vi":"Hoạt Động Hôm Nay",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5503,7 +5503,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Zeal Phẩn Thưởng",
+        "vi":"Phần Thưởng H.Động",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5522,7 +5522,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Zeal Yêu Cầu",
+        "vi":"Điểm H.Động",
         "ar":"",
         "it":"",
         "pl":"",
