--- a/Translation/config.json
+++ b/Translation/config.json
@@ -201,7 +201,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hiện hoạt họa kỹ năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -220,7 +220,7 @@
         "de":"Lautstärke des Ambientes",
         "jp":"",
         "pt":"",
-        "vi":"Âm Thanh Môi Truờng",
+        "vi":"Âm lượng môi truờng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -239,7 +239,7 @@
         "de":"Lautstärke der Soundeffekte",
         "jp":"",
         "pt":"",
-        "vi":"Âm Lượng Hiệu Ứng",
+        "vi":"Âm lượng hiệu ứng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -277,7 +277,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Số dòng tối đa lưu trong Chat",
         "ar":"",
         "it":"",
         "pl":"",
