--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3876,6 +3876,25 @@
         "th":"",
         "id":""
     },
+    "UI.windows.guild.UI.windows.guild.statement":{
+        "en":"Guild Statement",
+        "fr":"Message de Guilde",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.guild.askLeave":{
         "en":"Once you leave a guild, you will have to wait a day before joining a new one. Continue ?",
         "fr":"Une fois la guilde quittée, vous devrez attendre un jour avant de pouvoir un joindre une nouvelle. Continuer ?",
