--- a/Translation/item.json
+++ b/Translation/item.json
@@ -22189,6 +22189,25 @@
         "th":"",
         "id":""
     },
+    "item.41030.name":{
+        "en":"Spirit Refining Stone",
+        "fr":"Gemme de rafinnage d'esprit",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.70000.name":{
         "en":"Floating Rock - I",
         "fr":"Rocher Volant - I",
