--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -239,7 +239,7 @@
         "de":"EXP",
         "jp":"",
         "pt":"",
-        "vi":"K.Nghiệm",
+        "vi":"Kinh Nghiệm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1854,7 +1854,7 @@
         "de":"Tapferkeit",
         "jp":"",
         "pt":"",
-        "vi":"Anh Dũng",
+        "vi":"Chiến Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1892,7 +1892,7 @@
         "de":"Tapferkeit",
         "jp":"",
         "pt":"",
-        "vi":"Anh Dũng",
+        "vi":"Chiến Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1949,7 +1949,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tốn: {0} Pha Lê Tẩy Chất Anh Dũng",
+        "vi":"Tốn: {0} Pha Lê Tẩy Chất Chiến Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2063,7 +2063,7 @@
         "de":"Mats.",
         "jp":"",
         "pt":"",
-        "vi":"V.Liệu",
+        "vi":"Vật Liệu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2082,7 +2082,7 @@
         "de":"Geist",
         "jp":"",
         "pt":"",
-        "vi":"T.Linh",
+        "vi":"Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2101,7 +2101,7 @@
         "de":"Quest",
         "jp":"",
         "pt":"",
-        "vi":"N.Vụ",
+        "vi":"Nhiệm Vụ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2671,7 +2671,7 @@
         "de":"Herstellungs EXP",
         "jp":"",
         "pt":"",
-        "vi":"K.Nghiệm Chế Tạo",
+        "vi":"Kinh Nghiệm Chế Tạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3888,7 +3888,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tuyên Bố Công Hội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4553,7 +4553,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tẩy",
+        "vi":"Tẩy Tủy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7079,8 +7079,8 @@
         "tr":"",
         "de":"",
         "jp":"",
-        "pt":"",
-        "vi":"Tổng k.nghiệm nguyên tố hiện tại: {0}",
+        "pt":"",    
+        "vi":"Kinh nghiệm nguyên tố hiện có: {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7099,7 +7099,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"K.nghiệm nguyên tố cần thêm: {0}",
+        "vi":"Kinh nghiệm nguyên tố cần: {0}",
         "ar":"",
         "it":"",
         "pl":"",
