--- a/Translation/config.json
+++ b/Translation/config.json
@@ -258,7 +258,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Số lượng dòng lưu tối đa trong Logs",
+        "vi":"Số dòng lưu tối đa trong Logs",
         "ar":"",
         "it":"",
         "pl":"",
