--- a/Translation/item.json
+++ b/Translation/item.json
@@ -13012,7 +13012,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc Gấp Đôi K.Nghiệm",
+        "vi":"Ngọc X2 K.Nghiệm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22163,7 +22163,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Pha Lê Anh Dũng",
+        "vi":"Pha Lê Chiến Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22182,7 +22182,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Pha Lê Tẩy Chất Anh Dũng",
+        "vi":"Pha Lê Tẩy Chất Chiến Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22201,7 +22201,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đá Tẩy Tủy Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
