--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -125,7 +125,7 @@
         "de":"APT",
         "jp":"",
         "pt":"",
-        "vi":"T.Chất",
+        "vi":"Tư Chất",
         "ar":"",
         "it":"",
         "pl":"",
