--- a/Translation/general.json
+++ b/Translation/general.json
@@ -410,7 +410,7 @@
         "de":"Gewöhnlich",
         "jp":"",
         "pt":"",
-        "vi":"Tầm Thường",
+        "vi":"Thường",
         "ar":"",
         "it":"",
         "pl":"",
