--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3895,7 +3895,7 @@
         "th":"",
         "id":""
     },
-    "UI.windows.guild.UI.windows.guild.statement":{
+    "UI.windows.guild.statement":{
         "en":"Guild Statement",
         "fr":"Message de Guilde",
         "es":"",
