--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2196,7 +2196,7 @@
         "de":"Befestigung",
         "jp":"",
         "pt":"",
-        "vi":"Cường",
+        "vi":"Cường Hóa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2234,7 +2234,7 @@
         "de":"Verkauf",
         "jp":"",
         "pt":"",
-        "vi":"Bày Bán",
+        "vi":"Bán Lẻ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6073,7 +6073,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nghịch Thiên ",
+        "vi":"Vực Thẳm Nghịch Thiên",
         "ar":"",
         "it":"",
         "pl":"",
