--- a/Translation/event.json
+++ b/Translation/event.json
@@ -163,7 +163,7 @@
         "de":"Zeiten: 11:00-12:00 19:00-20:00 (GMT+1)",
         "jp":"19:00-20:00 03:00-04:00 (GMT+9)",
         "pt":"10:00-11:00 18:00-19:00 (GMT+0)",
-        "vi":"Thời Gian: 17:00-18:00 01:00-02:00 (GMT+7)",
+        "vi":"Thời Gian: 15:00-16:00 23:00-00:00 (GMT+7 Việt Nam)",
         "ar":"04:00-05:00 12:00-13:00 (GMT-6)",
         "it":"09:00-10:00 17:00-18:00 (GMT-1)",
         "pl":"11:00-12:00 19:00-20:00 (GMT+1)",
@@ -201,7 +201,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"K.Nghiệm, Mã Kim",
+        "vi":"Kinh Nghiệm, Mã Kim",
         "ar":"",
         "it":"",
         "pl":"",
@@ -220,7 +220,7 @@
         "de":"Zeiten: 15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+1)",
         "jp":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+9)",
         "pt":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+0)",
-        "vi":"Thời Gian: 15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+7)",
+        "vi":"Thời Gian: 20:00-20:30 21:30-22:00<br>1:30-2:00 2:30-3:00 (GMT+7 Việt Nam)",
         "ar":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT-6)",
         "it":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT-1)",
         "pl":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+1)",
