--- a/Translation/item.json
+++ b/Translation/item.json
@@ -13012,7 +13012,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc X2 K.Nghiệm",
+        "vi":"Ngọc X2 Kinh Nghiệm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -13031,7 +13031,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc X5 K.Nghiệm",
+        "vi":"Ngọc X5 Kinh Nghiệm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -13050,7 +13050,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc X10 K.Nghiệm",
+        "vi":"Ngọc X10 Kinh Nghiệm",
         "ar":"",
         "it":"",
         "pl":"",
