--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1740,7 +1740,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thị Trấn Tinh Tú - Tầng 1",
+        "vi":"Thị Trấn Lấp Lánh - Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1759,7 +1759,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thị Trấn Tinh Tú - Tầng 2",
+        "vi":"Thị Trấn Lấp Lánh - Tầng 2",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1778,7 +1778,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thị Trấn Tinh Tú - Tầng 3",
+        "vi":"Thị Trấn Lấp Lánh - Tầng 3",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1797,7 +1797,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thị Trấn Tinh Tú - Tầng 4",
+        "vi":"Thị Trấn Lấp Lánh - Tầng 4",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1816,7 +1816,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thị Trấn Tinh Tú - Tầng 5",
+        "vi":"Thị Trấn Lấp Lánh - Tầng 5",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1835,7 +1835,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thị Trấn Tinh Tú - Điện Tinh Anh",
+        "vi":"Thị Trấn Lấp Lánh - Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1854,7 +1854,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thị Trấn Tinh Tú - Thâm Điện Tinh Anh",
+        "vi":"Thị Trấn Lấp Lánh - Thâm Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1873,10 +1873,10 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Biển Hoang Mang",
+        "vi":"Hải Vực Quái Ngư",
         "ar":"",
         "it":"",
-        "pl":"",
+        "pl":"",    
         "th":"",
         "id":""
     },
@@ -1892,7 +1892,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Biển Thần Bí",
+        "vi":"Hải Vực Huyền Bí",
         "ar":"",
         "it":"",
         "pl":"",
