--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4085,6 +4085,63 @@
         "th":"",
         "id":""
     },
+    "UI.windows.guild.btn.gotoGuildList":{
+        "en":"Guild List",
+        "fr":"Liste des Guildes",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.btn.guildWar":{
+        "en":"Guild War",
+        "fr":"Guerre de Guildes",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.btn.strongholdReg":{
+        "en":"Stronghold Reg.",
+        "fr":"Enreg. Bastion",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.guild.popup.donate.gold.label":{
         "en":"You are about to donate gold to your guild.<br><b>Once you have donated gold to a guild, you can't take it back.</b>",
         "fr":"Vous allez donner de l'or à votre guilde.<br><b>Une fois l'or donné à la guilde, il est impossible de le récupérer.</b>",
