--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1594,5 +1594,24 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "general.label.equiped":{
+        "en":"Equiped",
+        "fr":"Équipé",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
