--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4921,6 +4921,63 @@
         "th":"",
         "id":""
     },
+    "UI.windows.spirit.combine.explaination":{
+        "en":"To combine a spirit, you need to have both your equipped spirit and the selected spirit to be at max soul level. You can only combine with a lower level spirit. Combining will take 20% BASE stat in the selected spirit to your equipped one. Combinations can't be cumulated.",
+        "fr":"Pour combiner un esprit, il faut que l'esprit équipé et l'esprit sélectionné soient tous deux au niveau d'âme maximum. Vous ne pouvez combiner qu'avec un esprit de niveau inférieur. En combinant un esprit, vous ajoutez 20% des stats de base de l'esprit sélectionné à celle de l'esprit équipé. Les combinaisons ne peuvent pas être cumulées.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.combine.current-stats":{
+        "en":"Current spirit combined stats",
+        "fr":"Amélioration de combinaison actuelle",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.combine.new-stats":{
+        "en":"New spirit combined stats",
+        "fr":"Amélioration de combinaison résultante",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.daily-quest-list.title":{
         "en":"Get Daily Quest",
         "fr":"Obtenir les Quête Quotidienne",
