--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1596,7 +1596,7 @@
         "id":""
     },
     "general.label.equiped":{
-        "en":"Equiped",
+        "en":"Equipped",
         "fr":"Équipé",
         "es":"",
         "zh-cn":"",
