--- a/Translation/general.json
+++ b/Translation/general.json
@@ -892,6 +892,44 @@
         "th":"",
         "id":"Mnt"
     },
+    "general.time.hour":{
+        "en":"Hour",
+        "fr":"Heure",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":"Menit"
+    },
+    "general.time.day":{
+        "en":"Day",
+        "fr":"Jour",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":"Menit"
+    },
     "general.title.elite":{
         "en":"Elite",
         "fr":"Élite",
