--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3223,7 +3223,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Điểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4097,7 +4097,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Danh Sách Công Hội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4116,7 +4116,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Công Hội Đại Chiến",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4135,7 +4135,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Q.Định Thành Lũy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4933,7 +4933,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Để dung hợp tinh linh, bạn cần tinh linh đang trang bị và tinh linh được chọn đều ở cấp linh hồn tối đa. Bạn chỉ có thể dung hợp với tinh linh cấp thấp hơn. Dung hợp sẽ chuyển giao 20% chỉ số GỐC từ tinh linh được chọn sang tinh linh đang trang bị. Dung hợp không thể cộng dồn. Tinh linh đã được dung hợp sẽ mất đi khi dung hợp hoàn tất.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4952,7 +4952,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chỉ số tinh linh dung hợp hiện tại",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4971,7 +4971,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chỉ số tinh linh dung hợp mới",
         "ar":"",
         "it":"",
         "pl":"",
