--- a/Translation/general.json
+++ b/Translation/general.json
@@ -904,7 +904,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giờ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -923,7 +923,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1645,7 +1645,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đang Trang Bị",
         "ar":"",
         "it":"",
         "pl":"",
